# robot-ws

./: .github_actions.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: thread.drawio
scripts/: build.sh  build_esp32.sh  clean.sh  clean_esp32.sh  config.sh  mainte_data.py  monitor.sh  run.sh  run_mainte_server.py  system.py  system_config.yml  unit_test.sh
src/: CMakeLists.txt  app_main.cpp  main.cpp
src/algorithm/: CMakeLists.txt  kalman_filter.cpp  kalman_filter.hpp  kinematic.cpp  kinematic.hpp  math_const.hpp  math_utility.cpp  math_utility.hpp  pose_estimator.cpp  pose_estimator.hpp  smooth_path.hpp  smooth_path.inl  switch.cpp  switch.hpp  wave.cpp  wave.hpp
src/common/: CMakeLists.txt  extern_definition.hpp  memory.hpp  queue.cpp  queue.hpp  semaphore.cpp  semaphore.hpp  thread.cpp  thread.hpp  utility.hpp
src/constant/: clock_const.hpp  math_const.hpp  robot_const.hpp
src/control/: CMakeLists.txt  arm_control.cpp  arm_control.hpp  leg_controller.cpp  leg_controller.hpp  motion.cpp  motion.hpp  robot.cpp  robot.hpp  robot_control.cpp  robot_control.hpp  robot_data.hpp  state.hpp
src/control_data/: CMakeLists.txt  io_data.hpp  mainte_data.hpp  msg_data.hpp  packet_data.hpp  robot_data.hpp
src/io_interface/: CMakeLists.txt  gpio_handler.cpp  gpio_handler.hpp  io_data.hpp  io_interface.cpp  io_interface.hpp  pwm_servo.cpp  pwm_servo.hpp  serial_servo.cpp  serial_servo.hpp  uart_handler.cpp  uart_handler.hpp
src/kinematics/: CMakeLists.txt  kinematic_base.cpp  kinematic_base.hpp  pupper_kinematic.cpp  pupper_kinematic.hpp
src/mainte/: CMakeLists.txt  mainte.cpp  mainte.hpp
src/mainte_server/: canvas_gui.py  main.py  mainte_data.py  mainte_gui_main.py  mainte_server_gui.py  mainte_server_main.py  msg_data.py  packet_data.py  reference_gui.py  run_mainte_server.py  test_gui.py  wave.py
src/robot/: CMakeLists.txt  arm_control.hpp  motion.cpp  motion.hpp  motion_generator.cpp  motion_generator.hpp  robot_control.cpp  robot_control.hpp
src/scripts/: system.py  system_config.yml
src/utility/: CMakeLists.txt  kalman_filter.cpp  kalman_filter.hpp  math_utility.cpp  smooth_path.cpp  smooth_path.hpp
test/: CMakeLists.txt
test/algorithm/: CMakeLists.txt  kalman_filter_test.cpp  kinematic_test.cpp  pose_estimator_test.cpp  smooth_path_test.cpp  wave_test.cpp
test/kinematics/: CMakeLists.txt  kinematic_test.cpp  pupper_kinematic_test.cpp
